tidying testing of validation code