@@ -20,7 +20,7 @@ import org.openprovenance.prov.scala.immutable.Parser;
 
 
 public abstract class CoreValidateTester extends TestCase {
-    
+
     public static org.openprovenance.prov.model.ProvFactory pf=new org.openprovenance.prov.scala.mutable.ProvFactory();
 
     static ValidationReport report;
@@ -30,9 +30,6 @@ public abstract class CoreValidateTester extends TestCase {
     protected static Set<String> checkedSet = new HashSet<String> ();
 
 
-    public CoreValidateTester(String testName) {
-        super(testName);
-    }
     public void testUnification(String file, int strictCycles, int nonStrictCycles, List<Integer> failed,
                                 List<Integer> successes,
                                 int mismatches, int malformed, boolean excp) {
@@ -40,25 +37,25 @@ public abstract class CoreValidateTester extends TestCase {
     }
 
     public void testUnification(String file, int strictCycles, int nonStrictCycles, List<Integer> failed,
-                                        List<Integer> successes,
-                                        int mismatches, int malformed, int types, boolean excp) {
+                                List<Integer> successes,
+                                int mismatches, int malformed, int types, boolean excp) {
         try {
-        	logger.debug("testing " + file);
-            testValidate(file);
+            logger.debug("testing " + file);
+            doTestValidate(file);
             List<Dependencies> ll1 = report.getCycle();
-            assertTrue(ll1.size() == strictCycles);
-            assertTrue(report.getNonStrictCycle().size() == nonStrictCycles);
+            assertEquals(ll1.size(), strictCycles);
+            assertEquals(report.getNonStrictCycle().size(), nonStrictCycles);
             assertTrue(failed.contains(report.getFailedMerge().size()));
-            System.out.println(report);
-            System.out.println(successes);
-            System.out.println(report.getSuccessfulMerge().size());
+            //System.out.println(report);
+            //System.out.println(successes);
+            //System.out.println(report.getSuccessfulMerge().size());
             assertTrue(successes.contains(report.getSuccessfulMerge().size()));
-            assertTrue(report.getQualifiedNameMismatch().size() == mismatches);
-            assertTrue(report.getTypeOverlap().size()==types);
+            assertEquals(report.getQualifiedNameMismatch().size(), mismatches);
+            assertEquals(report.getTypeOverlap().size(), types);
             if (report.getMalformedStatements()==null) {
-        	assertTrue(malformed==0);
+                assertEquals(0, malformed);
             } else {
-        	assertTrue(report.getMalformedStatements().getStatement().size()== malformed);
+                assertEquals(report.getMalformedStatements().getStatement().size(), malformed);
             }
 
             assertFalse(excp);
@@ -71,76 +68,70 @@ public abstract class CoreValidateTester extends TestCase {
 
     }
 
-    List<Integer> z = Arrays.asList(0);
-    List<Integer> one = Arrays.asList(1);
+    List<Integer> z = List.of(0);
+    List<Integer> one = List.of(1);
     List<Integer> v12 = Arrays.asList(1, 2);
     List<Integer> v123 = Arrays.asList(1, 2, 3);
-    List<Integer> two = Arrays.asList(2);
-    List<Integer> three = Arrays.asList(3);
+    List<Integer> two = List.of(2);
+    List<Integer> three = List.of(3);
 
-  
-    public void testValidate(String file) throws 
-            java.io.IOException {
+
+    public void doTestValidate(String file) throws java.io.IOException {
         logger.info("Loading file " + file);
-        
+
         File f = new File(file);
         org.openprovenance.prov.scala.immutable.Document d = Parser.readDocument(file);
         Document b = pf.newDocument(d);
         String out = "target/complete-" + f.getName();
         String report = "target/report-" + f.getName();
-        testValidate(b, out, report);
+        doTestValidate(b, out, report);
     }
-    
 
-    public void testValidate(Document b, String out, String reportFile)
-            throws java.io.IOException {
-        
+
+    public void doTestValidate(Document b, String out, String reportFile) throws java.io.IOException {
+
         report=new Validate(Config.newYesToAllConfig(pf, new ValidationObjectMaker())).validate(b);
 
     }
 
-    public Validate testOrdering(Document b, String out, String reportFile,
-                                List<String> rulesToDisable)
+    public Validate doTestOrdering(Document b, String out, String reportFile,
+                                   List<String> rulesToDisable)
             throws  java.io.IOException {
-                Config config=Config.newYesToAllConfig(pf,new ValidationObjectMaker());
-                for (String ruleToDisable: rulesToDisable) {
-                    config.config.remove(ruleToDisable);
-                }
-                Validate v=new Validate(config);
-                v.validate(b);
-                checkedSet.addAll(rulesToDisable);
-                return v;
-            }
-
-    public Validate testOrdering(String file) {
-        return testOrdering(file, new LinkedList<String>());
+        Config config=Config.newYesToAllConfig(pf,new ValidationObjectMaker());
+        for (String ruleToDisable: rulesToDisable) {
+            config.config.remove(ruleToDisable);
+        }
+        Validate v=new Validate(config);
+        v.validate(b);
+        checkedSet.addAll(rulesToDisable);
+        return v;
     }
 
-    public Validate testOrdering(String file, String rule) {
-        List<String> rulesToDisable=new LinkedList<String>();
+    public Validate doTestOrdering(String file) {
+        return doTestOrdering(file, new LinkedList<>());
+    }
+
+    public Validate doTestOrdering(String file, String rule) {
+        List<String> rulesToDisable= new LinkedList<>();
         rulesToDisable.add(rule);
-        return testOrdering(file, rulesToDisable);
+        return doTestOrdering(file, rulesToDisable);
     }
 
-    public Validate testOrdering(String file, List<String> rulesToDisable) {
+    public Validate doTestOrdering(String file, List<String> rulesToDisable) {
         try {
-            logger.debug("testing " + file);
+            logger.info("testing " + file);
 
             File f = new File(file);
             org.openprovenance.prov.scala.immutable.Document d = Parser.readDocument(file);
             Document b = pf.newDocument(d);
             String out = "target/complete-" + f.getName();
             String report = "target/report-" + f.getName();
-    
-            Validate val=testOrdering(b,out,report,rulesToDisable);
-            
-            return val;
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (UnsupportedOperationException e) {
-            e.printStackTrace();
+
+            return doTestOrdering(b,out,report,rulesToDisable);
+        } catch (IOException | UnsupportedOperationException e) {
+            logger.throwing(e);
         }
-        assertTrue(false);
+        fail();
         return null;
     }
 
